@@ -1,3 +1,9 @@
+Wed Aug  2 12:13:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* If a test appears to have had a memory leak, the testsuite runs the
+	  test a second time to find out if it happens again - and if not
+	  decides that everything it fine.
+
 Tue Aug  1 19:05:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Testsuite displays addresses in hex.
